@@ -2408,19 +2408,19 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		  break;
 
 		case '1':
-		  infprintf (is, "0x%lx", GET_OP (insn, STYPE));
+		  infprintf (is, "0x%x", GET_OP (insn, STYPE));
 		  break;
 
 		case '<':
-		  infprintf (is, "0x%lx", GET_OP (insn, SHAMT));
+		  infprintf (is, "0x%x", GET_OP (insn, SHAMT));
 		  break;
 
 		case '\\':
-		  infprintf (is, "0x%lx", GET_OP (insn, 3BITPOS));
+		  infprintf (is, "0x%x", GET_OP (insn, 3BITPOS));
 		  break;
 
 		case '|':
-		  infprintf (is, "0x%lx", GET_OP (insn, TRAP));
+		  infprintf (is, "0x%x", GET_OP (insn, TRAP));
 		  break;
 
 		case '~':
@@ -2452,7 +2452,7 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		  break;
 
 		case 'c':
-		  infprintf (is, "0x%lx", GET_OP (insn, CODE));
+		  infprintf (is, "0x%x", GET_OP (insn, CODE));
 		  break;
 
 		case 'd':
@@ -2460,12 +2460,12 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		  break;
 
 		case 'h':
-		  infprintf (is, "0x%lx", GET_OP (insn, PREFX));
+		  infprintf (is, "0x%x", GET_OP (insn, PREFX));
 		  break;
 
 		case 'i':
 		case 'u':
-		  infprintf (is, "0x%lx", GET_OP (insn, IMMEDIATE));
+		  infprintf (is, "0x%x", GET_OP (insn, IMMEDIATE));
 		  break;
 
 		case 'j': /* Same as i, but sign-extended.  */
@@ -2519,7 +2519,7 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		  break;
 
 		case 'q':
-		  infprintf (is, "0x%lx", GET_OP (insn, CODE2));
+		  infprintf (is, "0x%x", GET_OP (insn, CODE2));
 		  break;
 
 		case 't':
@@ -2536,11 +2536,11 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		  break;
 
 		case 'B':
-		  infprintf (is, "0x%lx", GET_OP (insn, CODE10));
+		  infprintf (is, "0x%x", GET_OP (insn, CODE10));
 		  break;
 
 		case 'C':
-		  infprintf (is, "0x%lx", GET_OP (insn, COPZ));
+		  infprintf (is, "0x%x", GET_OP (insn, COPZ));
 		  break;
 
 		case 'D':
@@ -2555,7 +2555,7 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		    'T' format.  Therefore, until we gain understanding of
 		    cp2 register names, we can simply print the register
 		    numbers.  */
-		  infprintf (is, "$%ld", GET_OP (insn, RT));
+		  infprintf (is, "$%d", GET_OP (insn, RT));
 		  break;
 
 		case 'G':
@@ -2577,13 +2577,13 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		      infprintf (is, "%s", mips_cp0_names[GET_OP (insn, RS)]);
 		      break;
 		    default:
-		      infprintf (is, "$%ld", GET_OP (insn, RS));
+		      infprintf (is, "$%d", GET_OP (insn, RS));
 		      break;
 		    }
 		  break;
 
 		case 'H':
-		  infprintf (is, "%ld", GET_OP (insn, SEL));
+		  infprintf (is, "%d", GET_OP (insn, SEL));
 		  break;
 
 		case 'K':
@@ -2591,13 +2591,13 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 		  break;
 
 		case 'M':
-		  infprintf (is, "$fcc%ld", GET_OP (insn, CCC));
+		  infprintf (is, "$fcc%d", GET_OP (insn, CCC));
 		  break;
 
 		case 'N':
 		  infprintf (is,
 			   (op->pinfo & (FP_D | FP_S)) != 0
-			   ? "$fcc%ld" : "$cc%ld",
+			   ? "$fcc%d" : "$cc%d",
 			   GET_OP (insn, BCC));
 		  break;
 
@@ -2793,7 +2793,7 @@ print_insn_micromips (bfd_vma memaddr, struct disassemble_info *info)
 
 		    case 'C':
 		      immed = micromips_imm_c_map[GET_OP (insn, IMMC)];
-		      infprintf (is, "0x%lx", immed);
+		      infprintf (is, "0x%x", immed);
 		      break;
 
 		    case 'D':
