@@ -550,7 +550,7 @@ print_insn_sparc (bfd_vma memaddr, disassemble_info *info)
 	      /* Can't do simple format if source and dest are different.  */
 	      continue;
 
-	  (*info->fprintf_func) (stream, opcode->name);
+	  (*info->fprintf_func) (stream, "%s", opcode->name);
 
 	  {
 	    const char *s;
@@ -704,7 +704,7 @@ print_insn_sparc (bfd_vma memaddr, disassemble_info *info)
 		    break;
 
 		  case ')':	/* 5 bit unsigned immediate from RS3.  */
-		    (info->fprintf_func) (stream, "%#x", X_RS3 (insn));
+		    (info->fprintf_func) (stream, "%#x", (unsigned int) X_RS3 (insn));
 		    break;
 
 		  case 'X':	/* 5 bit unsigned immediate.  */
