@@ -1,3 +1,8 @@
+2012-07-24  Dr David Alan Gilbert  <dave@treblig.org>
+
+	PR binutils/13135
+	* dis-asm.h (fprintf_ftype): Add ATTRIBUTE_FPTR_PRINTF_2.
+
 2012-07-13  Doug Evans  <dje@google.com>
 
 	* filenames.h: #include "hashtab.h".
